--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://23nith.github.io/myportfolio",
+  "homepage": "https://23nith.github.io/my-portfolio",
   "scripts": {
     "deploy": "gh-pages -d dist"
   },
